force-app/main/default/objects/Pago_Referidor__c/Pago_Referidor__c.object-meta.xml
<CustomObject>
    <description>Registra cada pago del programa de referidos D-01 (al referidor y/o cashback al referido).</description>
    <label>Pago Referidor</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Pago Referidor Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos Referidor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>