force-app/main/default/objects/Pago_Referidor__c/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Beneficiario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pagos Recibidos</relationshipLabel>
    <relationshipName>Pagos_Recibidos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>