force-app/main/default/objects/Pago_Referidor__c/fields/Metodo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_Pago__c</fullName>
    <label>Metodo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferencia SPEI</fullName>
            </value>
            <value>
                <fullName>Credito proxima poliza</fullName>
            </value>
            <value>
                <fullName>Gift card</fullName>
            </value>
            <value>
                <fullName>Descuento renovacion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>