force-app/main/default/objects/Pago_Referidor__c/fields/Modelo_D01__c.field-meta.xml
<CustomField>
    <fullName>Modelo_D01__c</fullName>
    <label>Modelo D-01</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A fijo</fullName>
            </value>
            <value>
                <fullName>A tiered</fullName>
            </value>
            <value>
                <fullName>B revenue share</fullName>
            </value>
            <value>
                <fullName>C cashback</fullName>
            </value>
            <value>
                <fullName>Hibrido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>