force-app/main/default/objects/Pago_Referidor__c/fields/Monto_MXN__c.field-meta.xml
<CustomField>
    <fullName>Monto_MXN__c</fullName>
    <label>Monto (MXN)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>