force-app/main/default/objects/Pago_Referidor__c/fields/Nota__c.field-meta.xml
<CustomField>
    <fullName>Nota__c</fullName>
    <label>Nota</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>