force-app/main/default/objects/Pago_Referidor__c/fields/Referencia_Bancaria__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Bancaria__c</fullName>
    <description>Clave SPEI o similar para rastreo.</description>
    <externalId>true</externalId>
    <label>Referencia bancaria</label>
    <length>50</length>
    <type>Text</type>
</CustomField>