force-app/main/default/objects/Pago_Referidor__c/fields/Rol_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Rol_Beneficiario__c</fullName>
    <label>Rol del beneficiario</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referidor</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>